--- a/src/SerialLoops/Views/Editors/ScriptCommandEditors/FlagScriptCommandEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/ScriptCommandEditors/FlagScriptCommandEditorView.axaml
@@ -8,10 +8,10 @@
              x:DataType="vm:FlagScriptCommandEditorViewModel"
              x:Class="SerialLoops.Views.Editors.ScriptCommandEditors.FlagScriptCommandEditorView">
     <Grid ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto">
-        <TextBlock Grid.Column="0" Grid.Row="0" Margin="0,7,0,0" Text="{x:Static assets:Strings.Flag}"/>
+        <TextBlock Grid.Column="0" Grid.Row="0" VerticalAlignment="Center" Text="{x:Static assets:Strings.Flag}"/>
         <TextBox Grid.Column="1" Grid.Row="0" Margin="10,0,0,0" Text="{Binding Flag}"/>
 
-        <TextBlock Grid.Column="0" Grid.Row="1" Margin="0,7,0,0" Text="{x:Static assets:Strings.Set_Clear}"/>
+        <TextBlock Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" Text="{x:Static assets:Strings.Set_Clear}"/>
         <CheckBox Grid.Column="1" Grid.Row="1" Margin="10,0,0,0" IsChecked="{Binding SetClear}"/>
     </Grid>
 </UserControl>
