--- a/src/SerialLoops/Views/Editors/ScriptCommandEditors/HaruhiMeterScriptCommandEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/ScriptCommandEditors/HaruhiMeterScriptCommandEditorView.axaml
@@ -8,13 +8,13 @@
              x:DataType="vm:HaruhiMeterScriptCommandEditorViewModel"
              x:Class="SerialLoops.Views.Editors.ScriptCommandEditors.HaruhiMeterScriptCommandEditorView">
     <Grid ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto">
-        <TextBlock Grid.Column="0" Grid.Row="0" Margin="0,7,0,0" Text="{x:Static assets:Strings.Add}"/>
+        <TextBlock Grid.Column="0" Grid.Row="0" VerticalAlignment="Center" Text="{x:Static assets:Strings.Add}"/>
         <NumericUpDown Grid.Column="1" Grid.Row="0" Margin="10,0,0,0"  Value="{Binding AddAmount}"
                        Minimum="-9" Maximum="9" FormatString="N0" Increment="1" ParsingNumberStyle="Integer" IsVisible="{Binding !NoShow}"/>
         <NumericUpDown Grid.Column="1" Grid.Row="0" Margin="10,0,0,0" Value="{Binding AddNoShowAmount}"
                        Minimum="-9" Maximum="9" FormatString="N0" Increment="1" ParsingNumberStyle="Integer" IsVisible="{Binding NoShow}"/>
 
-        <TextBlock Grid.Column="0" Grid.Row="1" Margin="0,7,0,0" Text="{x:Static assets:Strings.Set}" IsVisible="{Binding !NoShow}"/>
+        <TextBlock Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" Text="{x:Static assets:Strings.Set}" IsVisible="{Binding !NoShow}"/>
         <NumericUpDown Grid.Column="1" Grid.Row="1" Margin="10,0,0,0" Value="{Binding SetAmount}"
                        Minimum="0" Maximum="9" FormatString="N0" Increment="1" ParsingNumberStyle="Integer" IsVisible="{Binding !NoShow}"/>
     </Grid>
