--- a/src/SerialLoops/Views/Editors/ScriptCommandEditors/ScreenShakeScriptCommandEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/ScriptCommandEditors/ScreenShakeScriptCommandEditorView.axaml
@@ -8,15 +8,15 @@
              x:DataType="vm:ScreenShakeScriptCommandEditorViewModel"
              x:Class="SerialLoops.Views.Editors.ScriptCommandEditors.ScreenShakeScriptCommandEditorView">
     <Grid ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto,Auto">
-        <TextBlock Grid.Column="0" Grid.Row="0" Margin="0,7,0,0" Text="{x:Static assets:Strings.Duration__Frames_}"/>
+        <TextBlock Grid.Column="0" Grid.Row="0" VerticalAlignment="Center" Text="{x:Static assets:Strings.Duration__Frames_}"/>
         <NumericUpDown Grid.Column="1" Grid.Row="0" Value="{Binding Duration}" Minimum="0"
                        Maximum="{Binding MaxShort}" FormatString="N0" Increment="1" ParsingNumberStyle="Integer"/>
 
-        <TextBlock Grid.Column="0" Grid.Row="1" Margin="0,7,0,0" Text="{x:Static assets:Strings.Horizontal_Intensity}"/>
+        <TextBlock Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" Text="{x:Static assets:Strings.Horizontal_Intensity}"/>
         <NumericUpDown Grid.Column="1" Grid.Row="1" Value="{Binding HorizontalIntensity}" Minimum="0"
                        Maximum="{Binding MaxShort}" FormatString="N0" Increment="1" ParsingNumberStyle="Integer"/>
 
-        <TextBlock Grid.Column="0" Grid.Row="2" Margin="0,7,0,0" Text="{x:Static assets:Strings.Vertical_Intensity}"/>
+        <TextBlock Grid.Column="0" Grid.Row="2" VerticalAlignment="Center" Text="{x:Static assets:Strings.Vertical_Intensity}"/>
         <NumericUpDown Grid.Column="1" Grid.Row="2" Value="{Binding VerticalIntensity}" Minimum="0"
                        Maximum="{Binding MaxShort}" FormatString="N0" Increment="1" ParsingNumberStyle="Integer"/>
     </Grid>
