--- a/src/SerialLoops/Views/Editors/ScriptCommandEditors/SetPlaceScriptCommandEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/ScriptCommandEditors/SetPlaceScriptCommandEditorView.axaml
@@ -9,10 +9,10 @@
              x:DataType="vm:SetPlaceScriptCommandEditorViewModel"
              x:Class="SerialLoops.Views.Editors.ScriptCommandEditors.SetPlaceScriptCommandEditorView">
     <Grid ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto">
-        <TextBlock Grid.Column="0" Grid.Row="0" Margin="0,7,0,0" Text="{x:Static assets:Strings.Display_}"/>
+        <TextBlock Grid.Column="0" Grid.Row="0" VerticalAlignment="Center" Text="{x:Static assets:Strings.Display_}"/>
         <CheckBox Grid.Column="1" Grid.Row="0" Margin="10,0,0,0" IsChecked="{Binding Display}" />
 
-        <TextBlock Grid.Column="0" Grid.Row="1" Margin="0,7,0,0" Text="{x:Static assets:Strings.Place}"/>
+        <TextBlock Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" Text="{x:Static assets:Strings.Place}"/>
         <StackPanel Grid.Column="1" Grid.Row="1" Margin="10,0,0,0" Orientation="Horizontal">
             <Button Content="{x:Static assets:Strings.Select___}" Command="{Binding ChangePlaceCommand}"/>
             <controls:ItemLink Tabs="{Binding Tabs}" Item="{Binding Place}"/>
