--- a/src/SerialLoops/Views/Editors/ScriptCommandEditors/VgotoScriptCommandEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/ScriptCommandEditors/VgotoScriptCommandEditorView.axaml
@@ -8,10 +8,10 @@
              x:DataType="vm:VgotoScriptCommandEditorViewModel"
              x:Class="SerialLoops.Views.Editors.ScriptCommandEditors.VgotoScriptCommandEditorView">
     <Grid ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto">
-        <TextBlock Grid.Column="0" Grid.Row="0" Margin="0,7,0,0" Text="{x:Static assets:Strings.Conditional}"/>
+        <TextBlock Grid.Column="0" Grid.Row="0" VerticalAlignment="Center" Text="{x:Static assets:Strings.Conditional}"/>
         <TextBox Grid.Column="1" Grid.Row="0" Margin="10,0,0,0" Text="{Binding Conditional}"/>
 
-        <TextBlock Grid.Column="0" Grid.Row="1" Margin="0,7,0,0" Text="{x:Static assets:Strings.Script_Section}"/>
+        <TextBlock Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" Text="{x:Static assets:Strings.Script_Section}"/>
         <ComboBox Grid.Column="1" Grid.Row="1" Margin="10,0,0,0" ItemsSource="{Binding ScriptEditor.ScriptSections}"
                   SelectedItem="{Binding SectionToJumpTo}"/>
     </Grid>
