--- a/src/SerialLoops/Views/Editors/TopicEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/TopicEditorView.axaml
@@ -24,22 +24,22 @@
         </StackPanel>
         <TextBlock Grid.Column="1" Grid.Row="1" Margin="10,0,0,0" IsVisible="{Binding Topic.HiddenMainTopic, Converter={x:Static ObjectConverters.IsNotNull}}" Text="{Binding Topic.HiddenMainTopic.Id}"/>
 
-        <TextBlock Grid.Column="0" Grid.Row="2" Margin="0,7,0,0" Text="{x:Static assets:Strings.Title}"/>
+        <TextBlock Grid.Column="0" Grid.Row="2" VerticalAlignment="Center" Text="{x:Static assets:Strings.Title}"/>
         <TextBox Grid.Column="1" Grid.Row="2" Margin="10,0,0,0" Text="{Binding Title}"/>
 
         <TextBlock Grid.Column="0" Grid.Row="3" Text="{x:Static assets:Strings.Type}" />
         <TextBlock Grid.Column="1" Grid.Row="3" Margin="10,0,0,0" Text="{Binding Topic.TopicEntry.CardType}"/>
 
-        <TextBlock Grid.Column="0" Grid.Row="4" Margin="0,7,0,0" Text="{x:Static assets:Strings.Associated_Script}" IsVisible="{Binding Topic.TopicEntry.Type, Converter={x:Static ObjectConverters.NotEqual}, ConverterParameter=3}"/>
+        <TextBlock Grid.Column="0" Grid.Row="4" VerticalAlignment="Center" Text="{x:Static assets:Strings.Associated_Script}" IsVisible="{Binding Topic.TopicEntry.Type, Converter={x:Static ObjectConverters.NotEqual}, ConverterParameter=3}"/>
         <StackPanel Grid.Column="1" Grid.Row="4" Margin="10,0,0,0" Orientation="Horizontal" Spacing="5" IsVisible="{Binding Topic.TopicEntry.Type, Converter={x:Static ObjectConverters.NotEqual}, ConverterParameter=3}">
             <ComboBox ItemsSource="{Binding Scripts}" SelectedItem="{Binding AssociatedScript}"/>
             <controls:ItemLink Item="{Binding AssociatedScript}" Tabs="{Binding Tabs}"/>
         </StackPanel>
 
-        <TextBlock Grid.Column="0" Grid.Row="5" Margin="0,7,0,0" Text="{x:Static assets:Strings.Episode_Group}"/>
+        <TextBlock Grid.Column="0" Grid.Row="5" VerticalAlignment="Center" Text="{x:Static assets:Strings.Episode_Group}"/>
         <ComboBox Grid.Column="1" Grid.Row="5" ItemsSource="{Binding EpisodeGroups}" SelectedIndex="{Binding EpisodeGroup}" Margin="10,0,0,0"/>
 
-        <TextBlock Grid.Column="0" Grid.Row="6" Margin="0,7,0,0" Text="{x:Static assets:Strings.Puzzle_Phase_Group}"/>
+        <TextBlock Grid.Column="0" Grid.Row="6" VerticalAlignment="Center" Text="{x:Static assets:Strings.Puzzle_Phase_Group}"/>
         <NumericUpDown Grid.Column="1" Grid.Row="6" Margin="10,0,0,0" Value="{Binding PuzzlePhaseGroup}" Minimum="1" Maximum="6"
                        FormatString="N0" Increment="1" ParsingNumberStyle="Integer"/>
 
@@ -47,14 +47,14 @@
                                                 IconPath="avares://SerialLoops/Assets/Icons/Help.svg"
                                                 IconTip="{x:Static assets:Strings.TopicTimesHelp}">
             <Grid ColumnDefinitions="Auto,Auto,Auto" RowDefinitions="Auto,Auto,Auto,Auto,Auto">
-                <TextBlock Grid.Column="0" Grid.Row="0" Margin="0,7,0,0" Text="{x:Static assets:Strings.Base_Time_Gain}"/>
+                <TextBlock Grid.Column="0" Grid.Row="0" VerticalAlignment="Center" Text="{x:Static assets:Strings.Base_Time_Gain}"/>
                 <StackPanel Grid.Column="1" Grid.Row="0" Margin="10,0,0,0" Orientation="Horizontal" Spacing="3">
                     <NumericUpDown Value="{Binding BaseTimeGain}" Minimum="0" Maximum="{Binding MaxShort}"
                                    FormatString="N0" Increment="1" ParsingNumberStyle="Integer"/>
                     <TextBlock Text="{x:Static assets:Strings.sec}" VerticalAlignment="Center"/>
                 </StackPanel>
 
-                <TextBlock Grid.Column="0" Grid.Row="1" Margin="0,7,0,0" Text="{x:Static assets:Strings.Kyon_Time_Percentage}"/>
+                <TextBlock Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" Text="{x:Static assets:Strings.Kyon_Time_Percentage}"/>
                 <StackPanel Grid.Column="1" Grid.Row="1" Margin="10,0,0,0" Orientation="Horizontal">
                     <NumericUpDown Value="{Binding KyonTimePercentage}" Minimum="0" Maximum="{Binding MaxShort}"
                                    FormatString="N0" Increment="1" ParsingNumberStyle="Integer" VerticalAlignment="Center"/>
@@ -66,7 +66,7 @@
                     <TextBlock Text="{x:Static assets:Strings.sec}" VerticalAlignment="Center"/>
                 </StackPanel>
 
-                <TextBlock Grid.Column="0" Grid.Row="2" Margin="0,7,0,0" Text="{x:Static assets:Strings.Mikuru_Time_Percentage}"/>
+                <TextBlock Grid.Column="0" Grid.Row="2" VerticalAlignment="Center" Text="{x:Static assets:Strings.Mikuru_Time_Percentage}"/>
                 <StackPanel Grid.Column="1" Grid.Row="2" Margin="10,0,0,0" Orientation="Horizontal">
                     <NumericUpDown Value="{Binding MikuruTimePercentage}" Minimum="0" Maximum="{Binding MaxShort}"
                                    FormatString="N0" Increment="1" ParsingNumberStyle="Integer"/>
@@ -78,7 +78,7 @@
                     <TextBlock Text="{x:Static assets:Strings.sec}" VerticalAlignment="Center"/>
                 </StackPanel>
 
-                <TextBlock Grid.Column="0" Grid.Row="3" Margin="0,7,0,0" Text="{x:Static assets:Strings.Nagato_Time_Percentage}"/>
+                <TextBlock Grid.Column="0" Grid.Row="3" VerticalAlignment="Center" Text="{x:Static assets:Strings.Nagato_Time_Percentage}"/>
                 <StackPanel Grid.Column="1" Grid.Row="3" Margin="10,0,0,0" Orientation="Horizontal">
                     <NumericUpDown Value="{Binding NagatoTimePercentage}" Minimum="0" Maximum="{Binding MaxShort}"
                                    FormatString="N0" Increment="1" ParsingNumberStyle="Integer"/>
@@ -90,7 +90,7 @@
                     <TextBlock Text="{x:Static assets:Strings.sec}" VerticalAlignment="Center"/>
                 </StackPanel>
 
-                <TextBlock Grid.Column="0" Grid.Row="4" Margin="0,7,0,0" Text="{x:Static assets:Strings.Koizumi_Time_Percentage}"/>
+                <TextBlock Grid.Column="0" Grid.Row="4" VerticalAlignment="Center" Text="{x:Static assets:Strings.Koizumi_Time_Percentage}"/>
                 <StackPanel Grid.Column="1" Grid.Row="4" Margin="10,0,0,0" Orientation="Horizontal">
                     <NumericUpDown Value="{Binding KoizumiTimePercentage}" Minimum="0" Maximum="{Binding MaxShort}"
                                    FormatString="N0" Increment="1" ParsingNumberStyle="Integer"/>
